@@ -45,9 +45,10 @@ The options are as follows:
 Enable more debugging information.
 .It Fl f Ar format
 Choose the output format. Currently
-.Em plain
-and
+.Em plain ,
 .Em xml
+and
+.Em keyvalue
 formats are available. The default is
 .Em plain.
 .It Fl L Ar location
